# firmware-alif-e7

./: .cproject  .gitignore  .project  CMakeLists.txt  Dockerfile  LICENSE  LICENSE-Alif.txt  README.md  build.sh  build_appkit.sh  build_devkit.sh  ei-app-gcc.json  ensemble.ld  ensemble.sct
dependencies/alif_ml-embedded-evaluation-kit/: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  Dockerfile  License.txt  Readme.md  build_commands.txt  build_default.py  download_dependencies.py  inference_demo.json  release_notes.txt  set_up_default_resources.py
dependencies/alif_ml-embedded-evaluation-kit/automation/: Jenkinsfile  test_common.groovy
dependencies/alif_ml-embedded-evaluation-kit/dependencies/cmsis-ensemble/: AlifSemiconductor.Ensemble.pdsc
dependencies/alif_ml-embedded-evaluation-kit/dependencies/cmsis-ensemble/Flash/: ensemble_mram.py  ensemble_setup.py
dependencies/alif_ml-embedded-evaluation-kit/dependencies/core-driver/src/: ethosu_common.h
dependencies/alif_ml-embedded-evaluation-kit/dependencies/core-platform/: .ignore  PORTING.md  README.md  requirements.txt
dependencies/alif_ml-embedded-evaluation-kit/dependencies/core-platform/applications/: CMakeLists.txt
dependencies/alif_ml-embedded-evaluation-kit/dependencies/core-platform/cmake/: helpers.cmake
dependencies/alif_ml-embedded-evaluation-kit/dependencies/core-platform/docs/: cmake_components.puml  cmake_target_common.puml  multinpu.puml  startup.puml
dependencies/alif_ml-embedded-evaluation-kit/dependencies/core-platform/drivers/: CMakeLists.txt
dependencies/alif_ml-embedded-evaluation-kit/dependencies/core-platform/scripts/: ethosu_monitor.py  generate_binaries.py  run_ctest.py  run_platform.py
dependencies/alif_ml-embedded-evaluation-kit/docs/: documentation.md  quick_start.md
dependencies/alif_ml-embedded-evaluation-kit/docs/sections/: appendix.md  arm_virtual_hardware.md  building.md  cmake_presets.md  coding_guidelines.md  customizing.md  deployment.md  faq.md  memory_considerations.md  testing_benchmarking.md  timing_adapters.md  troubleshooting.md
dependencies/alif_ml-embedded-evaluation-kit/docs/use_cases/: ad.md  asr.md  img_class.md  inference_runner.md  kws.md  kws_asr.md  noise_reduction.md  object_detection.md  visual_wake_word.md
dependencies/alif_ml-embedded-evaluation-kit/model_conditioning_examples/: Readme.md  post_training_quantization.py  quantization_aware_training.py  requirements.txt  setup.sh  training_utils.py  weight_clustering.py  weight_pruning.py
dependencies/alif_ml-embedded-evaluation-kit/resources/: LICENSE_CC_1.0.txt  LICENSE_CC_4.0.txt
dependencies/alif_ml-embedded-evaluation-kit/resources/ad/samples/: files.md
dependencies/alif_ml-embedded-evaluation-kit/resources/asr/labels/: labels_wav2letter.txt
dependencies/alif_ml-embedded-evaluation-kit/resources/asr/samples/: files.md
dependencies/alif_ml-embedded-evaluation-kit/resources/cmsis-packs/: ARM.ml-embedded-eval-kit-uc-api.22.8.0-Beta.pack  ARM.ml-embedded-eval-kit-uc-api.pdsc
dependencies/alif_ml-embedded-evaluation-kit/resources/kws/samples/: files.md
dependencies/alif_ml-embedded-evaluation-kit/resources/kws_asr/samples/: files.md
dependencies/alif_ml-embedded-evaluation-kit/resources/noise_reduction/samples/: files.md
dependencies/alif_ml-embedded-evaluation-kit/resources/vww/labels/: visual_wake_word_labels.txt
dependencies/alif_ml-embedded-evaluation-kit/resources/vww/samples/: files.md
dependencies/alif_ml-embedded-evaluation-kit/scripts/cmake/: Arm-2D.cmake  cmsis-dsp.cmake  common_user_options.cmake  lvgl.cmake  options-preset.json  source_gen_utils.cmake  tensorflow.cmake  util_functions.cmake
dependencies/alif_ml-embedded-evaluation-kit/scripts/cmake/cmsis-pack-gen/: CMakeLists.txt  use-case-api.yml
dependencies/alif_ml-embedded-evaluation-kit/scripts/cmake/timing_adapter/: ta_config_u55_high_end.cmake  ta_config_u65_high_end.cmake
dependencies/alif_ml-embedded-evaluation-kit/scripts/cmake/toolchains/: bare-metal-armclang.cmake  bare-metal-gcc.cmake  native-gcc.cmake  toolchain-preset.json
dependencies/alif_ml-embedded-evaluation-kit/scripts/mps3/sse-300/: images.txt
dependencies/alif_ml-embedded-evaluation-kit/scripts/mps3/sse-310/: images.txt
dependencies/alif_ml-embedded-evaluation-kit/scripts/py/: check_update_resources_downloaded.py  gen_audio.py  gen_audio_cpp.py  gen_default_input_cpp.py  gen_labels_cpp.py  gen_model_cpp.py  gen_rgb_cpp.py  gen_test_data_cpp.py  gen_utils.py  requirements.txt  rnnoise_dump_extractor.py  setup_hooks.py
dependencies/alif_ml-embedded-evaluation-kit/scripts/py/templates/: AudioClips.cc.template  AudioClips.hpp.template  Images.cc.template  Images.hpp.template  Labels.cc.template  Labels.hpp.template  TestData.cc.template  TestData.hpp.template  audio.cc.template  default.hpp.template  header_template.txt  image.cc.template  iofmdata.cc.template  tflite.cc.template
dependencies/alif_ml-embedded-evaluation-kit/scripts/vela/: default_vela.ini
dependencies/alif_ml-embedded-evaluation-kit/source/: readme.md
dependencies/alif_ml-embedded-evaluation-kit/source/application/main/: Main.cc  UseCaseCommonUtils.cc
dependencies/alif_ml-embedded-evaluation-kit/source/hal/: CMakeLists.txt  readme.md
dependencies/alif_ml-embedded-evaluation-kit/source/hal/include/: hal.h  hal_audio.h  hal_image.h
dependencies/alif_ml-embedded-evaluation-kit/source/log/: CMakeLists.txt  readme.md
dependencies/alif_ml-embedded-evaluation-kit/source/math/: CMakeLists.txt  PlatformMath.cc  readme.md
dependencies/alif_ml-embedded-evaluation-kit/source/math/include/: PlatformMath.hpp
dependencies/alif_ml-embedded-evaluation-kit/source/profiler/: CMakeLists.txt  Profiler.cc  readme.md
dependencies/alif_ml-embedded-evaluation-kit/source/profiler/include/: Profiler.hpp
dependencies/alif_ml-embedded-evaluation-kit/source/use_case/: readme.md  usecase-preset.json
dependencies/alif_ml-embedded-evaluation-kit/tests/common/: AppContextTest.cc  ClassifierTests.cc  PlatformMathTests.cpp  ProfilerTests.cc  SlidingWindowTests.cc
(+790 files in other folders)
